nivasa-macros/tests/trybuild/scxml_handler_invalid_state_path.rs
use nivasa_macros::scxml_handler;

#[scxml_handler(statechart = "request", state = "../guard_chain")]
fn handler() {}

fn main() {}
